--- a/midgen/midprgen.html
+++ b/midgen/midprgen.html
@@ -42,7 +42,9 @@
         <option value="--ar 9:16">--ar 9:16</option>
         <option value="--ar 1:1">--ar 1:1</option>
     </select>
-    <br><br><br>
+    <br>
+    <label><input type="checkbox" id="appendimagine" value="/imagine " class="larger">Add "/imagine"</label>
+    <br><br>
     <button id="generate-button" style="height: 30px;">Generate!</button><br>
     <textarea id="output-text" rows="4" cols="50"></textarea>
     <button id="copy-button" style="height: 30px;">Copy</button>
@@ -212,7 +214,8 @@
             }
             // Get the checked checkboxes and map their values to an array
             var checkedValues = $("input[type='checkbox']:checked").map(function () {
-                return $(this).val();
+                if ($(this).val() != "/imagine ")
+                    return $(this).val();
             }).get();
             // Join the array with comma
             var checkedText = checkedValues.join(", ");
@@ -222,7 +225,13 @@
             var aspectRatio = $("#aspect-ratio").val();
 
             // Join all the values with comma and set it as the output text
-            var outputText = "/imagine " + inputText + " :: " + checkedText + ", " + artistStyle + imageWeight + " " + aspectRatio;
+            if ($('input[id="appendimagine"]').is(':checked')) {
+                var outputText = "/imagine " + inputText + " :: " + checkedText + ", " + artistStyle + imageWeight + " " + aspectRatio;
+            } else {
+                var outputText = inputText + " :: " + checkedText + ", " + artistStyle + imageWeight + " " + aspectRatio;
+
+            }
+
             $("#output-text").val(outputText);
         });
 
