--- a/midgen/midprgen.html
+++ b/midgen/midprgen.html
@@ -211,7 +211,7 @@
             var refImage = $("#ref-image").val() + " ";
 
             var artistStyle = $("#artistDropdown").val();
-            if (artistStyle.slice(0, 3) == "000") {
+            if (artistStyle == "Nobody") {
                 artistStyle = "";
             }
             else {
@@ -236,7 +236,7 @@
         
             
             // Join all the values with comma and set it as the output text
-            var outputText = refImage + inputText + " :: " + checkedText + ", " + artistStyle + imageWeight + " " + aspectRatio + seed;
+            var outputText = refImage + inputText + " / " + checkedText + ", " + artistStyle + imageWeight + " " + aspectRatio + seed;
             if ($('input[id="appendimagine"]').is(':checked')) {
                 var outputText = "/imagine " + outputText.trim();
             }
