--- a/midgen/midprgen.html
+++ b/midgen/midprgen.html
@@ -254,7 +254,7 @@
             // Get the input text
             var inputText = $("#input-text").val();
 
-            var refImage = $("#ref-image").val() + " ";
+            var refImage = "<" + $("#ref-image").val() + "> ";
 
             var illustratorStyle = $("#illustratorsDropdown").val().trim().replace("Nobody", "")
             var photographerStyle = $("#photographersDropdown").val().trim().replace("Nobody", "");
